@@ -1,3 +1,10 @@
+01/18/2005  version 0.3 pre10   Ian Lewis <IanLewis@member.fsf.org>
+
+    * Added some new functionality for action plugins to add menu items
+      to the tools menu.
+    * Added a method to XMLDocument that allows you to get a copy of the
+      underlying Document object.
+
 01/08/2005  version 0.3 pre9    Ian Lewis <IanLewis@member.fsf.org>
 
     * Finished the plugin manager dialog.
